--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -31,6 +31,8 @@
 
 </footer>
 @if(feedback){
-  <feedback-modal class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
-
+  <feedback-modal 
+  rateMessage="How would you rate your overall experience with DOME?"
+  writeMessage="How can we improve DOME?"
+  class="fixed inset-0 flex items-center justify-center z-40"></feedback-modal>
 }
